# advent-of-code

./: .gitignore  Cargo.toml  README.md  main.py  pyproject.toml  result_17.txt  setup.cfg
.cargo/: config.toml
data/answers/2016/: 01.txt  03.txt  09.txt  10.txt  14.txt  15.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt
data/answers/2017/: 21.txt  22.txt  23.txt  24.txt
data/answers/2018/: 01.txt  02.txt  03.txt  04.txt  05.txt  06.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  15.txt  17.txt  18.txt  19.txt  20.txt  21.txt  22.txt  23.txt  24.txt
data/answers/2019/: 01.txt  02.txt  03.txt  04.txt  05.txt  07.txt  08.txt  09.txt  10.txt  11.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  18.txt  19.txt
data/answers/2023/: 02.txt  03.txt  05.txt  06.txt  07.txt  09.txt  10.txt  12.txt  13.txt  14.txt  15.txt  16.txt  17.txt  19.txt  21.txt  22.txt  23.txt  24.txt
data/answers/2024/: 02.txt  03.txt  04.txt  05.txt  08.txt  09.txt  10.txt  12.txt  13.txt  14.txt  15.txt  18.txt  20.txt  21.txt  22.txt  23.txt  24.txt
data/answers/2025/: 01.txt  03.txt  04.txt  05.txt
data/examples/: 22.txt
data/examples/2015/: 14.txt
data/examples/2016/: 25.txt
data/examples/2019/: 07.txt  14.txt
pycli/: download.py  main.py  scaffold.py  solve.py  utils.py
pycli/src/: bron_kerbosch.py  dijkstra.py  grid.py  held_karp.py  karger_min_cut.py  letters.py  print_tree.py  ranges.py  topological_sort.py
pycli/src/year_2015/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_09.py  day_11.py  day_13.py  day_14.py  day_15.py  day_16.py  day_18.py  day_20.py  day_21.py  day_22.py
pycli/src/year_2016/: day_01.py  day_02.py  day_03.py  day_04.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
pycli/src/year_2017/: day_02.py  day_03.py  day_04.py  day_06.py  day_07.py  day_08.py  day_09.py  day_11.py  day_12.py  day_13.py  day_14.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
pycli/src/year_2018/: day_01.py  day_02.py  day_03.py  day_04.py  day_05.py  day_06.py  day_07.py  day_08.py  day_09.py  day_10.py  day_11.py  day_12.py  day_13.py  day_14.py  day_15.py  day_16.py  day_17.py  day_18.py  day_19.py  day_20.py  day_21.py  day_22.py  day_23.py  day_24.py  day_25.py
pycli/src/year_2019/: day_01.py  (+19 more)
src/: main.rs
src/template/: aoc_cli.rs
(+69 files in other folders)
