[project]
name = ""
version = ""
description = ""
authors = [
    {name = "Laurent Tramoy", email = "laurenttramoy@gmail.com"},
]
dependencies = [
    "ipython>=8.18.1",
    "isort>=5.12.0",
    "black>=23.11.0",
    "typer>=0.9.0",
    "pydantic>=2.5.2",
    "ipdb>=0.13.13",
    "Pillow>=10.1.0",
    "numpy>=1.26.3",
    "sympy>=1.12",
]
requires-python = ">=3.12"
readme = "README.md"
license = {text = "MIT"}

[tool.pdm.scripts]
solve = {call = "main:app"}